fixed overflow on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -756,6 +756,7 @@ path {
 
 @media (max-width: $breakpoint-mobile) {
   body {
+    position: relative;
     overflow-x: hidden;
 
     #header {
